change button labels

--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
 
         <div class="control_wrap">
 
-            <p class="key">A</p>
+            <label for ="leftUp" class="key">A</label>
             <button id="leftUp" class="control" >▲</button>
-            <p class="key">Y</p>
+            <label for ="leftDown" class="key">Y</label>
             <button id="leftDown" class="control" >▼</button>
             <div id="space"></div>
             
+            <label for="rightUp" class="key">K</label>
             <button id="rightUp" class="control" >▲</button>
-            <p class="key">K</p>
+            <label for="rightDown" class="key">M</label>
             <button id="rightDown" class="control" >▼</button>
-            <p class="key">M</p>
+
 
          
 
